# C-Troll

./: .gitignore  .gitmodules  CMakeLists.txt  CREDITS  Jenkinsfile  LICENSE  README  README.md  TODO.md  deploy.bat
common/: CMakeLists.txt
common/include/: apiversion.h  commandmessage.h  corecommand.h  erroroccurredmessage.h  exitcommandmessage.h  genericmessage.h  guicommand.h  guiinitialization.h  guiprocesscommand.h  guiprocesslogmessage.h  guiprocesslogmessagehistory.h  guiprocessstatus.h  guistartcommand.h  invalidauthmessage.h  jsonload.h  jsonsocket.h  jsonsupport.h  killallmessage.h  killtraymessage.h  logconfiguration.h  logging.h  mainwindow.h  message.h  processoutputmessage.h  processstatusmessage.h  standardmainwindow.h  startcommandmessage.h  traycommand.h  trayprocesslogmessage.h  trayprocessstatus.h  traystatusmessage.h
common/src/: commandmessage.cpp  corecommand.cpp  erroroccurredmessage.cpp  exitcommandmessage.cpp  genericmessage.cpp  guicommand.cpp  guiinitialization.cpp  guiprocesscommand.cpp  guiprocesslogmessage.cpp  guiprocesslogmessagehistory.cpp  guiprocessstatus.cpp  guistartcommand.cpp  invalidauthmessage.cpp  jsonsocket.cpp  jsonsupport.cpp  killallmessage.cpp  killtraymessage.cpp  logconfiguration.cpp  logging.cpp  mainwindow.cpp  message.cpp  processoutputmessage.cpp  processstatusmessage.cpp  standardmainwindow.cpp  startcommandmessage.cpp  traycommand.cpp  trayprocesslogmessage.cpp  trayprocessstatus.cpp  traystatusmessage.cpp
core/: CMakeLists.txt
core/ctroll/: CMakeLists.txt  clusterconnectionhandler.cpp  clusterconnectionhandler.h  clusterwidget.cpp  clusterwidget.h  color.cpp  color.h  configuration.cpp  configuration.h  database.cpp  database.h  logwidget.cpp  logwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  process.cpp  process.h  processwidget.cpp  processwidget.h  programwidget.cpp  programwidget.h  restconnectionhandler.cpp  restconnectionhandler.h  settingswidget.cpp  settingswidget.h  version.h
core/editor/: CMakeLists.txt  addbutton.cpp  addbutton.h  clusterdialog.cpp  clusterdialog.h  dynamiclist.cpp  dynamiclist.h  main.cpp  mainwindow.cpp  mainwindow.h  nodedialog.cpp  nodedialog.h  programdialog.cpp  programdialog.h  removebutton.cpp  removebutton.h  spacer.h
core/shared/: CMakeLists.txt  baseconfiguration.cpp  baseconfiguration.h  cluster.cpp  cluster.h  color.cpp  database.h  node.cpp  node.h  program.cpp  program.h  typedid.h  version.h
core/src/: application.cpp  application.h  cluster.cpp  cluster.h  clusterconnectionhandler.cpp  clusterconnectionhandler.h  clusterwidget.cpp  clusterwidget.h  color.cpp  color.h  command.cpp  command.h  configuration.cpp  configuration.h  configurationwidget.cpp  configurationwidget.h  coreprocess.cpp  coreprocess.h  database.cpp  database.h  guiinitialization.cpp  guiinitialization.h  guiprocesscommand.cpp  guiprocesscommand.h  guiprocesslogmessage.cpp  guiprocesslogmessage.h  guiprocesslogmessagehistory.cpp  guiprocesslogmessagehistory.h  guiprocessstatus.cpp  guiprocessstatus.h  guistartcommand.cpp  guistartcommand.h  main-editor.cpp  main.cpp  mainwindow.cpp  mainwindow.h  node.cpp  node.h  process.cpp  process.h  (+14 more)
core/src/application/: application.cpp
core/src/cluster/: cluster.cpp  cluster.h  clusterhandler.cpp  clusterhandler.h
core/src/handler/: incomingsockethandler.cpp  incomingsockethandler.h  mainhandler.cpp  mainhandler.h  outgoingsockethandler.cpp  outgoingsockethandler.h  (+2 more)
ext/: CMakeLists.txt
ext/simplecrypt/: CMakeLists.txt  simplecrypt.cpp
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/core/: CMakeLists.txt
src/ctroll/: CMakeLists.txt  clusterconnectionhandler.cpp  clusterconnectionhandler.h  clusterwidget.cpp  clusterwidget.h  color.cpp  color.h  configuration.cpp  configuration.h  database.cpp  database.h  logwidget.cpp  logwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  process.cpp  process.h  processwidget.cpp  processwidget.h  programwidget.cpp  programwidget.h  restconnectionhandler.cpp  restconnectionhandler.h  settingswidget.cpp  settingswidget.h  version.h
src/editor/: CMakeLists.txt  addbutton.cpp  addbutton.h  clusterdialog.cpp  clusterdialog.h  dynamiclist.cpp  dynamiclist.h  main.cpp  mainwindow.cpp  mainwindow.h  nodedialog.cpp  nodedialog.h  programdialog.cpp  programdialog.h  removebutton.cpp  removebutton.h  spacer.h  version.h
src/starter/: CMakeLists.txt  main.cpp
src/tray/: CMakeLists.txt  centralwidget.cpp  centralwidget.h  configuration.cpp  configuration.h  main.cpp  mainwindow.cpp  mainwindow.h  processhandler.cpp  processhandler.h  sockethandler.cpp  sockethandler.h  version.h
tests/: CMakeLists.txt  main.cpp  mock_core_exit.py  mock_core_kill.py  mock_core_start.py  mock_gui.py  mock_tray.py  test_cluster.cpp  test_cluster_examples.cpp  test_erroroccurred.cpp  test_erroroccurredmessage.cpp  test_exitcommand.cpp  test_exitcommandmessage.cpp  test_invalidauthmessage.cpp  test_killall.cpp  test_killallmessage.cpp  test_killtraymessage.cpp  test_message.cpp  test_node.cpp  test_node_examples.cpp  test_processoutput.cpp  test_processoutputmessage.cpp  test_processstatusmessage.cpp  test_program.cpp  test_program_examples.cpp  test_restartnode.cpp  test_restartnodemessage.cpp  test_shutdownnodemessage.cpp  test_startcommandmessage.cpp  test_trayconnectedmessage.cpp  test_traystatus.cpp  test_traystatusmessage.cpp
tray/: CMakeLists.txt
tray/src/: centralwidget.cpp  centralwidget.h  configuration.cpp  configuration.h  main.cpp  mainwindow.cpp  mainwindow.h  processhandler.cpp  processhandler.h  sockethandler.cpp  sockethandler.h  trayprocess.cpp  trayprocess.h  version.h
webgui/: .babelrc  .eslintrc  CMakeLists.txt  LICENSE  README.md  build.js  package-lock.json  package.json  server.js  webpack.config.js  webpack.production.config.js
webgui/app/: api.js  index.js  index.tpl.html  rootcontainer.js  routes.js
webgui/backend/: config.json  package-lock.json  package.json  server.js
webgui/public/: index.html
webgui/src/: actions.js  api.js  apimiddleware.js  main.cpp  query.js  routes.js  store.js
(+249 files in other folders)
